--- a/Contect.html
+++ b/Contect.html
@@ -16,7 +16,7 @@
 
         <div>
             <ul id="navbar">
-                <li><a href="Pick&pay.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Shop.html">Shop</a></li>
                 <li><a href="Blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
